--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
-*{
+* {
    padding: 30px;
    margin: 0;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-body{
+
+body {
    display: flex;
    flex-direction: column;
    justify-content: center;
@@ -11,32 +12,36 @@ body{
    text-align: center;
    background-color: rgb(235, 247, 249);
 
- }
- .conteur{
+}
+
+.conteur {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 500px;
    height: 20px;
    font-size: 30px;
-   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
+   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    border-color: rgb(245, 242, 245);
    border-radius: 70px;
    border-style: solid;
    color: #fff;
    background-color: rgb(0, 90, 151);
-   
- }
- .conteur span{
+
+}
+
+.conteur span {
 
    color: rgb(146, 208, 250);
- }
- .carts{
+}
+
+.carts {
    display: grid;
-   grid-template-columns: repeat(4,1fr);
-   grid-template-rows: repeat(3,1fr);
- }
- button{
+   grid-template-columns: repeat(4, 1fr);
+   grid-template-rows: repeat(3, 1fr);
+}
+
+button {
    background-color: rgb(247, 145, 233);
    color: rgb(4, 97, 211);
    border-radius: 10px;
@@ -47,8 +52,25 @@ body{
    display: flex;
    justify-content: center;
    align-items: center;
- }
- button:hover{
-    background-color: rgb(4, 97, 211);
-    color:rgb(247, 145, 233)
- }
+}
+
+button:hover {
+   background-color: rgb(4, 97, 211);
+   color: rgb(247, 145, 233)
+}
+
+.carts {
+   display: grid;
+   grid-template-columns: repeat(4, 1fr);
+   grid-template-rows: repeat(3, 1fr);
+   width: 50%;
+   height: 50vh;
+}
+
+.cart {
+   background-color: rgb(223, 32, 185);
+   border-radius: 10px;
+   margin-left: 10px;
+   margin-bottom: 10px;
+   font-size: 30px;
+}
